--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,8 +35,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_fonts: ^4.0.3
+  
 
 dev_dependencies:
+  velocity_x: ^3.3.0
   flutter_test:
     sdk: flutter
 
